force-app/main/default/objects/Physical_Address__c/Physical_Address__c.object-meta.xml
<CustomObject>
    <label>Physical Address</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Physical Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physcial Addresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>