force-app/main/default/objects/Physical_Address__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <label>Building Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>