force-app/main/default/objects/Physical_Address__c/fields/City_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>City_Abbreviation__c</fullName>
    <label>City Abbreviation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>