force-app/main/default/objects/Physical_Address__c/fields/CLLI_A__c.field-meta.xml
<CustomField>
    <fullName>CLLI_A__c</fullName>
    <label>CLLI_A</label>
    <length>25</length>
    <type>Text</type>
</CustomField>