force-app/main/default/objects/Physical_Address__c/fields/CLLI_B__c.field-meta.xml
<CustomField>
    <fullName>CLLI_B__c</fullName>
    <label>CLLI_B</label>
    <length>25</length>
    <type>Text</type>
</CustomField>