force-app/main/default/objects/Physical_Address__c/fields/CUST_INC_INDIC_2__c.field-meta.xml
<CustomField>
    <fullName>CUST_INC_INDIC_2__c</fullName>
    <label>CUST. INC. INDIC.2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>