force-app/main/default/objects/Physical_Address__c/fields/DSL_Cable__c.field-meta.xml
<CustomField>
    <fullName>DSL_Cable__c</fullName>
    <label>DSL Cable</label>
    <length>25</length>
    <type>Text</type>
</CustomField>