force-app/main/default/objects/Physical_Address__c/fields/External_Tax_Loc__c.field-meta.xml
<CustomField>
    <fullName>External_Tax_Loc__c</fullName>
    <label>External Tax Loc</label>
    <length>25</length>
    <type>Text</type>
</CustomField>