force-app/main/default/objects/Physical_Address__c/fields/Fbr_Drp_In_P_Flg__c.field-meta.xml
<CustomField>
    <fullName>Fbr_Drp_In_P_Flg__c</fullName>
    <label>Fiber Drop-IN-Place Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>