force-app/main/default/objects/Physical_Address__c/fields/FTTP_Flag__c.field-meta.xml
<CustomField>
    <fullName>FTTP_Flag__c</fullName>
    <label>FTTP Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>