force-app/main/default/objects/Physical_Address__c/fields/GEO_Block__c.field-meta.xml
<CustomField>
    <fullName>GEO_Block__c</fullName>
    <label>GEO Block</label>
    <length>25</length>
    <type>Text</type>
</CustomField>