force-app/main/default/objects/Physical_Address__c/fields/H_Ows_Identifi__c.field-meta.xml
<CustomField>
    <fullName>H_Ows_Identifi__c</fullName>
    <label>Home Owners Identification</label>
    <length>25</length>
    <type>Text</type>
</CustomField>