force-app/main/default/objects/Physical_Address__c/fields/Last_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Time__c</fullName>
    <label>Last Update Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>