force-app/main/default/objects/Physical_Address__c/fields/Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Lattitude__c</fullName>
    <label>Lattitude</label>
    <length>25</length>
    <type>Text</type>
</CustomField>