force-app/main/default/objects/Physical_Address__c/fields/Library_id__c.field-meta.xml
<CustomField>
    <fullName>Library_id__c</fullName>
    <externalId>true</externalId>
    <label>Library id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>