force-app/main/default/objects/Physical_Address__c/fields/Loc_Fran_Agmt__c.field-meta.xml
<CustomField>
    <fullName>Loc_Fran_Agmt__c</fullName>
    <label>Local Franchise Agreement</label>
    <length>25</length>
    <type>Text</type>
</CustomField>