force-app/main/default/objects/Physical_Address__c/fields/MAP_Number__c.field-meta.xml
<CustomField>
    <fullName>MAP_Number__c</fullName>
    <label>MAP Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>