force-app/main/default/objects/Physical_Address__c/fields/Message_Zone__c.field-meta.xml
<CustomField>
    <fullName>Message_Zone__c</fullName>
    <label>Message Zone</label>
    <length>225</length>
    <type>Text</type>
</CustomField>