force-app/main/default/objects/Physical_Address__c/fields/Over_Tax_Loc__c.field-meta.xml
<CustomField>
    <fullName>Over_Tax_Loc__c</fullName>
    <label>Overridden Tax Loc</label>
    <length>25</length>
    <type>Text</type>
</CustomField>