force-app/main/default/objects/Physical_Address__c/fields/S_O_L_C_Asg__c.field-meta.xml
<CustomField>
    <fullName>S_O_L_C_Asg__c</fullName>
    <label>S/O L/C Assignment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>