force-app/main/default/objects/Physical_Address__c/fields/SAM_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAM_Flag__c</fullName>
    <label>SAM Flag</label>
    <length>25</length>
    <type>Text</type>
</CustomField>