force-app/main/default/objects/Physical_Address__c/fields/SAM_Seq_No__c.field-meta.xml
<CustomField>
    <fullName>SAM_Seq_No__c</fullName>
    <label>SAM Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>