force-app/main/default/objects/Physical_Address__c/fields/Ser_Cntl_No__c.field-meta.xml
<CustomField>
    <fullName>Ser_Cntl_No__c</fullName>
    <label>Service Control Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>