force-app/main/default/objects/Physical_Address__c/fields/Ser_Loc_ID__c.field-meta.xml
<CustomField>
    <fullName>Ser_Loc_ID__c</fullName>
    <label>Service Location ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>