force-app/main/default/objects/Physical_Address__c/fields/State_Abbre__c.field-meta.xml
<CustomField>
    <fullName>State_Abbre__c</fullName>
    <label>State Abbreviation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>