force-app/main/default/objects/Physical_Address__c/fields/Str_Sub_Des__c.field-meta.xml
<CustomField>
    <fullName>Str_Sub_Des__c</fullName>
    <label>Street Sub Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>