force-app/main/default/objects/Physical_Address__c/fields/Street_Direction__c.field-meta.xml
<CustomField>
    <fullName>Street_Direction__c</fullName>
    <label>Street Direction</label>
    <length>25</length>
    <type>Text</type>
</CustomField>