force-app/main/default/objects/Physical_Address__c/fields/Street_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Street_Subtitle__c</fullName>
    <label>Street Subtitle</label>
    <length>25</length>
    <type>Text</type>
</CustomField>