force-app/main/default/objects/Physical_Address__c/fields/SubDiv_Abbre__c.field-meta.xml
<CustomField>
    <fullName>SubDiv_Abbre__c</fullName>
    <label>SUBDivision Abbreviation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>