force-app/main/default/objects/Physical_Address__c/fields/TAX_District__c.field-meta.xml
<CustomField>
    <fullName>TAX_District__c</fullName>
    <label>TAX District</label>
    <length>25</length>
    <type>Text</type>
</CustomField>