force-app/main/default/objects/Physical_Address__c/fields/Video_Flag__c.field-meta.xml
<CustomField>
    <fullName>Video_Flag__c</fullName>
    <label>Video Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>