force-app/main/default/objects/Physical_Address__c/fields/Wire_Center__c.field-meta.xml
<CustomField>
    <fullName>Wire_Center__c</fullName>
    <label>Wire Center</label>
    <length>25</length>
    <type>Text</type>
</CustomField>