force-app/main/default/objects/Physical_Address__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>Zipcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>